--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "riskihajar/terbilang": "2.0",
         "webklex/laravel-pdfmerger": "^1.3"
     },
     "require-dev": {
