--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "bacon/bacon-qr-code": "^2.0",
         "barryvdh/laravel-dompdf": "^2.0",
+        "dompdf/dompdf": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
@@ -16,6 +17,7 @@
         "pragmarx/google2fa-laravel": "^2.1",
         "realrashid/sweet-alert": "^7.1",
         "riskihajar/terbilang": "2.0",
+        "spatie/laravel-pdf": "^1.1",
         "webklex/laravel-pdfmerger": "^1.3"
     },
     "require-dev": {
