--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "puppeteer": "^22.0.0"
+        "puppeteer": "^22.0.0",
+        "react-router-dom": "^6.22.3"
     }
 }
